# EAIP_Viewer

./: .env.example  .flake8  .pre-commit-config.yaml  FRAMEWORK_COMPLETE.md  QUICKSTART.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
docs/: 01-安装部署指南.md  02-用户操作手册.md  03-开发指南.md  04-架构设计文档.md  05-项目阶段计划.md  06-用户认证系统详细文档.md  07-航图加密方案.md  08-混合安全方案使用指南.md  README.md
examples/: auth_server.py  security_demo.py
scripts/: README_AIPKG.md  build_aipkg.py  init_database.py
src/: config.py  main.py
src/controllers/: base_controller.py  test_controller.py
src/core/: aipkg_builder.py  aipkg_format.py  auth_client.py  chart_scanner.py  database.py  device_fingerprint.py  encryption_utils.py  hybrid_security.py  offline_credential.py
src/models/: base.py  chart.py  user.py
src/qml/: main.qml
src/qml/styles/: Theme.qml  qmldir
src/utils/: logger.py
tests/: test_aipkg_builder.py
